# mypy-config-shared

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/teo_mypy_config_shared/: __init__.py  mypy.ini
