[project]
name = "teo-mypy-config-shared"
version = "0.1.0"
description = "Shared mypy configuration for teo-garcia Python templates"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "teo-garcia" }]
keywords = ["mypy", "types", "typecheck", "shared", "python"]
dependencies = []

[project.scripts]
teo-mypy-config-path = "teo_mypy_config_shared:_cli"

[project.urls]
Repository = "https://github.com/teo-garcia/mypy-config-shared"

[dependency-groups]
dev = ["mypy>=1.14", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teo_mypy_config_shared"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "A", "C4", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/**" = ["T20"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
